clean up project, change folders structure